GNOME Bugzilla – Bug 709148
[pitivi] Groups are not saved / serialized into formatters
Last modified: 2015-06-24 14:42:56 UTC
As the title says... if you group clips, then save and load the project, those groups will not be preserved.
I am working on it.
Created attachment 289506 [details] [review] xml-formatter: Serialize groups They were not serialized until now. That implies several changes: * Override GESTimelineElement [start, inpoint, duration] properties in GESGroup to ensure that those properties are not serialized as they should not be. * Rename GESBaseXmlContainer->clips field to GESBaseXmlContainer->containers as the hashtable now contains Groups
Created attachment 289836 [details] [review] Just removes the TODO from the file